--- a/app/index.html
+++ b/app/index.html
@@ -150,6 +150,7 @@
     <script src="modules/statistics/statistics.service.js"></script>
 
     <script src="modules/connectMap/connectMap.controller.js"></script>
+    <script src="modules/connectMap/connectMap.service.js"></script>
 
     <script src="modules/previewRecord/previewRecord.controller.js"></script>
 
