--- a/app/modules/login/login.html
+++ b/app/modules/login/login.html
@@ -21,7 +21,7 @@
                    md-no-asterisk
             >
             <div ng-messages="form_login.loginName.$error">
-              <div ng-message="required" translate="MODULES_LOGIN_PLEASE_ENTER_ACCOUNT">请输入帐号</div>
+              <div ng-message="required" ><span translate="MODULES_LOGIN_PLEASE_ENTER_ACCOUNT"></span></div>
             </div>
           </md-input-container>
         </div>
@@ -40,15 +40,15 @@
                  required
           >
           <div ng-messages="form_login.password.$error">
-            <div ng-message="required" translate="MODULES_LOGIN_PLEASE_INPUT_A_PASSWORD">请输入密码</div>
-            <div ng-message="maxlength" translate="MODULES_LOGIN_PASSWORD_LENGTH_SHOULD_NOT_EXCEED">密码长度不能超过18位</div>
-            <div ng-message="minlength" translate="MODULES_LOGIN_PASSWORD_LENGTH_SHOULD_NOT_BE_LESS_THAN">密码长度不能少于6位</div>
+            <div ng-message="required" ><span translate="MODULES_LOGIN_PLEASE_INPUT_A_PASSWORD"></span></div>
+            <div ng-message="maxlength" ><span translate="MODULES_LOGIN_PASSWORD_LENGTH_SHOULD_NOT_EXCEED">密码长度不能超过18位</span></div>
+            <div ng-message="minlength" ><span translate="MODULES_LOGIN_PASSWORD_LENGTH_SHOULD_NOT_BE_LESS_THAN">密码长度不能少于6位</span></div>
           </div>
         </md-input-container>
       </div>
       <div class="form-group user-login-input ">
         <label class="select--language--title" translate="MODULES_LOGIN_LANGUAGE">语　言</label><md-input-container class="select--language--box">
-          <md-select ng-change="vm.changeLanguage(vm.user.language)" class="select--language--box__select" ng-model="vm.user.language" ng-init="vm.user.language = 'cn'">
+          <md-select ng-change="vm.changeLanguage(vm.user.language)" class="select--language--box__select" ng-model="vm.user.language" >
             <md-option  value="en" >
               English
             </md-option>
